fix some font sizing and spacing issues

--- a/src/components/markdown/markdown.scss
+++ b/src/components/markdown/markdown.scss
@@ -30,21 +30,21 @@
 .page-h2,
 .component-docs h2,
 .icon-h2 {
-  @include type-style('productive-heading-04');
+  @include type-style('expressive-heading-04');
   position: relative;
   color: $text-01;
   margin-top: rem(56px);
   margin-bottom: $spacing-lg;
   position: relative;
 }
- 
+
 //----------------------------
 // h3
 //----------------------------
 
 .page-h3,
 .component-docs h3 {
-  @include type-style('heading-03');
+  @include type-style('heading-02');
   color: $text-01;
   margin-top: rem(24px);
   margin-bottom: $spacing-md;
@@ -88,15 +88,18 @@
 //----------------------------
 // Anchor Link
 //----------------------------
-h2, h3, h4, h5 {
-  // This makes sure there is breathing room when 
+h2,
+h3,
+h4,
+h5 {
+  // This makes sure there is breathing room when
   // you jump to the heading anchor link
   &:before {
-    display: block; 
-    content: " "; 
-    margin-top: rem(-56px); 
-    height: rem(56px); 
-    visibility: hidden; 
+    display: block;
+    content: ' ';
+    margin-top: rem(-56px);
+    height: rem(56px);
+    visibility: hidden;
     pointer-events: none;
   }
 
@@ -105,7 +108,7 @@ h2, h3, h4, h5 {
     left: rem(-24px);
     opacity: 0;
   }
-  
+
   .anchor-link__icon {
     fill: $ibm-colors__blue--50;
   }
@@ -114,7 +117,6 @@ h2, h3, h4, h5 {
     opacity: 1;
   }
 }
-
 
 //----------------------------
 // ul / ol
@@ -134,7 +136,7 @@ h2, h3, h4, h5 {
   list-style-type: none;
 
   &:before {
-    content: "\2013";
+    content: '\2013';
     position: absolute;
     left: -1rem;
   }
@@ -146,7 +148,7 @@ h2, h3, h4, h5 {
   list-style-type: decimal;
 }
 
-// The following is a css hack because remark is nesting 
+// The following is a css hack because remark is nesting
 // tags inside of lists and causing double grid code
 .container .page-ol,
 .container .page-ul {
@@ -194,7 +196,7 @@ h2, h3, h4, h5 {
     padding-bottom: $spacing-xs;
 
     &:before {
-      content: "\21B3"; //"↳"
+      content: '\21B3'; //"↳"
       position: absolute;
       left: -1.5rem;
       cursor: pointer;
@@ -215,6 +217,12 @@ h2, h3, h4, h5 {
   }
 }
 
+.anchor-links--small .page-ul {
+  margin-top: 2.25rem;
+}
+.anchor-links--small .page-ul > li a {
+  @include type-style('body-long-02');
+}
 
 //----------------------------
 // Image
